feat: implement Gradle; Lombok dependencies